Fixed overlap?

--- a/src/year2/components/Timeline.module.scss
+++ b/src/year2/components/Timeline.module.scss
@@ -43,15 +43,15 @@
 // We can revisit it when we have the finalized timeline content.
 // ==============================================================
 
-/*
+
 .item {
   min-height: 8rem;
 }
 
 .item + .item {
-  margin-top: -5rem !important;
+  margin-top: -3rem !important;
 }
-*/
+
 
 // ==============================================================
 
